projectmanagement.com (archived on 2009-06-09)
{
  "alexa_rank": 641004,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7360,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.33,
  "homepage_snapshot_redirected_domain": "projectmanagement.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090221190208id_/http://www.projectmanagement.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090221190208id_/http%3A//projectmanagement.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "projectmanagement.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609070041id_/http%3A//www.projectmanagement.com/pm/privacy.cfm",
  "policy_title": "projectmanagement.com - projectmanagement.com Privacy Policy",
  "policy_url": "projectmanagement.com/pm/privacy.cfm",
  "sha1": "e51038d6bcfaeea6e4f20216cfcdaadf5ff6ce16",
  "simhash": 16310978273335556348,
  "simhash_updated": false,
  "site_hostname": "projectmanagement.com",
  "site_url": "http://projectmanagement.com",
  "smog": 15.07,
  "strict_updated": false,
  "timestamp": "20090609070041",
  "word_count": 1180,
  "year": 2009
}

--- a/p/pr/pro/projectmanagement.com.html
+++ b/p/pr/pro/projectmanagement.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the projectmanagement.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216095530id_/http%3A//www.projectmanagement.com/pm/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the projectmanagement.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609070041id_/http%3A//www.projectmanagement.com/pm/privacy.cfm) for the most accurate reproduction.-->
 
 <html><head><style type="text/css">
 <!--
@@ -86,7 +86,7 @@ A.toolbarFin:hover  { color: blue; text-decoration: underline; }
 
 <center>
 
-<a href="http://www.gantthead.com/clickCount.cfm?ID=245749&amp;replaceString=12160430&amp;offSite=2" target="_blank"><img src="http://www.gantthead.com/content/advertising/visioProject_160x6003.jpg" border="0"></a> 
+<a href="http://www.gantthead.com/clickCount.cfm?ID=247791&amp;replaceString=06090341&amp;offSite=2" target="_blank"><img src="http://www.gantthead.com/content/advertising/pc2009-160x600.gif" border="0"></a> 
 </center>
 
 
@@ -116,6 +116,8 @@ A.toolbarFin:hover  { color: blue; text-decoration: underline; }
 			<td><img src="/images/pm/pm/dot.gif"></td>
 			<td><a href="/pm/pmArticles.cfm" class="toolbar"><font class="toolbar">Articles</font></a></td>
 			<td><img src="/images/pm/pm/dot.gif"></td>
+			<td><a href="/pm/pmTools.cfm" class="toolbar"><font class="toolbar">Tools</font></a></td>
+			<td><img src="/images/pm/pm/dot.gif"></td>
 			<td><a href="/pm/discussions/PMdiscussionsTopicList.cfm?ID=128571" class="toolbar"><font class="toolbar">Discussions</font></a></td>
 			<td><img src="/images/pm/pm/dot.gif"></td>
 			<td><a href="/pm/pmAbout.cfm" class="toolbar"><font class="toolbar">About Us</font></a></td>
@@ -142,17 +144,17 @@ A.toolbarFin:hover  { color: blue; text-decoration: underline; }
 <tr>
 	<td width="1" bgcolor="C2C2C2" height="13"><img src="/images/onepixel.gif"></td>
 	<td>
-<b>Project Management Doesn't Stop When Economic Pressures are High.</b>  Learn how and why Daptiv PPM is cost effective, flexible, and beneficial to your entire organization. For Proven Return On Investment and Speed to Benefit - <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=245928" target="_blank">Download the Forrester Consulting Study Now!</a></b> 
+<b>DeVry University's Keller Graduate School of Management</b> offers the right mix of project management programs: <b>MPM</b>—Master's Degree in Project Management—accredited by PMI Global Accreditation Center (GAC); <b>MBA</b>—Master's Degree in Business Administration with a concentration in Project Management; <b>GCPM</b>—Graduate Certificate in Project Management. Download a copy of <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=249526" target="_blank">The Power of Project Management</a></b>. 
 				<p>
-			<b>Discover 11 secrets that top project managers use to fail-proof their projects.</b>  Learn best practices for managing projects in your organization by downloading this FREE article: <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=240033" target="_blank">How to Spot a Failing Project</a></b>.  Work smart.  Work happy. 
+			<b>Because Failure is Not an Option.</b> Have you managed projects where <b>scope continually changes</b>? Have you <b>missed project deadlines</b>, but don’t understand why? Have you had trouble <b>managing multiple projects with competing demands</b>? If these common challenges are putting project success out of reach, <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=249523" target="_blank">Management Concepts PM training</a></b> provides the knowledge and skills you need to <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=249523" target="_blank">effectively launch, manage, and execute projects</a></b>. 
 				</p><p>
-			<b>Coming Soon: <i>New Editions</i> of Four PMI Standards. Pre-order Yours Now!</b><br>
-Special combo offer: Pre-order one standard, get a second standard 40% off!<br>
-Start meeting your standards for better project performance. Order today at <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=245369" target="_blank">PMI.org/MyStandards</a></b>.
+			<b>Earn a Master's in Information Systems - AACSB Accredited</b><br>
+Wright State University's <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=249528" target="_blank">flexible 1–year program</a></b> combines  on line learning with five weekends in class.  Student projects return direct  and significant value to sponsoring firms.  Begin July, 17.   Contact: Martin Davis, Jr. Ph.D.     rscob-isom@wright.edu  937-775-2895   
 
 				</p><p>
-			<b>PPM WEBCAST: How Misys PLC Improved Global Resource Management — Hosted by CA</b><br>
-Join us for this live webcast as Misys PLC discusses how they improved global visibility into their projects and portfolios while streamlining the allocation of resources across the enterprise using CA Clarity™ PPM. This interactive webcast will include a live Q&amp;A session. <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=246295" target="_blank">Register now.</a></b>  
+			
+<b>Accelerate Your Career with UMUC</b><br>
+Get the hands-on learning you need to succeed as a systems administrator, network administrator or network engineer with University of Maryland University College's (UMUC) information technology programs. Visit <b><a href="http://www.gantthead.com/redirect/clickCount.cfm?ID=249574" target="_blank">www.umuc.edu</a></b> to learn more.
 
 				</p><p>
 			
