--- a/e/ea/eas/easy-fundraising-ideas.com.html
+++ b/e/ea/eas/easy-fundraising-ideas.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the easy-fundraising-ideas.com privacy policy that was archived on 2008-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081201024220id_/http%3A//www.easy-fundraising-ideas.com/help-center/security) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the easy-fundraising-ideas.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609082926id_/http%3A//www.easy-fundraising-ideas.com/help-center/security) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>Online Privacy &amp; Security Policy</title>
@@ -155,21 +155,20 @@
 		<div id="success-title">Testimonies</div>
 	</div>
 	
-	<div class="testimonial-text">"Thank you for the follow up and all the information with the fundraiser. Easy Fundraising Ideas has been a wonderful company to work with. All the information and employees are fantastic, Kari Styne and Shawn have been great.  During the years I have done fundraising for other organizations and such I have never worked with such a wonderful company."</div>
-	<div class="testimonial-signature" align="right">Kathleen Brundage</div>
-	<div class="sidebar-dotted-line"></div>
-	
-	<div class="testimonial-text">"Our experience with Easy Fundraising was the easiest we've ever had yet. Your brochures were colorful and classy. Orders were easily called in and delivery was very quick and delivered right to my door.  Thank you for a hassle-free experience and a profitable fundraiser for our girls."</div>
-	<div class="testimonial-signature" align="right">Laura Garrett</div>
-	<div class="sidebar-dotted-line"></div>
-	
-	<div class="testimonial-text">"You Guys are AWESOME!! This is the 3rd year doing business with you!"</div>
-	<div class="testimonial-signature" align="right">Cheryl Csengery
-</div>
+	<div class="testimonial-text">"I just want to tell you how happy I am. Our cheerleading school has 180 cheerleaders but only 18 girls sold cookie dough. When the others saw the results they were astounded. Believe me, we will all be selling your cookie dough next year. "</div>
+	<div class="testimonial-signature" align="right">Maryland Cheerleading Mom </div>
 	<div class="sidebar-dotted-line"></div>
 	
 	<div class="testimonial-text">"They look great! We are very pleased with them. I thank you so much for your time and effort on creating these cards for our new ball fields! You can surely use me as a reference if anyone wants to call me. I will gladly help! Thanks!"</div>
 	<div class="testimonial-signature" align="right">Mel Mouradian</div>
+	<div class="sidebar-dotted-line"></div>
+	
+	<div class="testimonial-text">"I wanted to say thank you, thank you. We at our church sold coffee. The forms arrived promptly. The color order forms sell the coffee by themselves. Buy extra because people will want more. I look forward to selling coffee again soon."</div>
+	<div class="testimonial-signature" align="right">Bill and Malynda Green</div>
+	<div class="sidebar-dotted-line"></div>
+	
+	<div class="testimonial-text">"Thank you for the quick delivery of the Taylor Middle School choir candy order; in fact, we would like to order more!"</div>
+	<div class="testimonial-signature" align="right">Gayle Beebe</div>
 	<div class="sidebar-dotted-line"></div>
 	
     <div id="security-info"></div>
