wincustomize.com (archived on 2009-06-09)
{
  "alexa_rank": 8099,
  "analysis_subcorpus": false,
  "categories": "business;informationtech",
  "char_count": 6715,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.0,
  "homepage_snapshot_redirected_domain": "wincustomize.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331094934id_/http://www.wincustomize.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331094934id_/http%3A//wincustomize.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "stardock.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609150331id_/http%3A//www.stardock.com/privacy.asp",
  "policy_title": "Stardock.com - Your Edge In Software",
  "policy_url": "stardock.com/privacy.asp",
  "sha1": "beaa5c79137f4c03bbf2820cf36169b14b41de83",
  "simhash": 18235000377869647354,
  "simhash_updated": true,
  "site_hostname": "wincustomize.com",
  "site_url": "http://wincustomize.com",
  "smog": 14.46,
  "strict_updated": true,
  "timestamp": "20090609150331",
  "word_count": 1073,
  "year": 2009
}

--- a/w/wi/win/wincustomize.com.html
+++ b/w/wi/win/wincustomize.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wincustomize.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217021813id_/http%3A//www.stardock.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wincustomize.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609150331id_/http%3A//www.stardock.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -35,6 +35,9 @@
 	-->
 	</style>
 
+
+
+
 	<script type="text/javascript" src="/js/browser.js"></script>
 	<style type="text/css">  @import url('/css/main.css');</style>
 	<!--[if gte IE 7]><style type="text/css">  @import url('/css/others.css');</style><![endif]-->
@@ -43,6 +46,7 @@
 	
 	<script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=searchbox_000252501301640439162%3Alsdbilb-yow"></script>
 	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+
 
 
 	<script type="text/javascript">
@@ -254,7 +258,7 @@ If you have any questions about this privacy statement, the practices of this si
 			<td class="Content" width="50%" valign="top">
 				<div class="title underline">Top Questions</div>
 				<div class="LI_ArrowBlack"><a href="http://downloads.stardock.com/">Where can I find free downloads?</a></div>
-				<div class="LI_ArrowBlack"><a href="http://www.stardock.com/about/contactus.asp">How can I contact support?</a></div>
+				<div class="LI_ArrowBlack"><a href="http://www.stardock.com/about/contactus.asp">How can I contact Stardock?</a></div>
 				<div class="LI_ArrowBlack"><a href="http://support.stardock.com/">How can I recover my serial number?</a></div>
 			</td>
 			<td class="Content" width="50%" valign="top">
@@ -302,8 +306,8 @@ If you have any questions about this privacy statement, the practices of this si
 		</div>
 	</div>
 	
-	<div style="margin: 10px auto 5px auto;">Copyright © 2008 Stardock Corporation. All rights reserved.</div>
-<script src="http://www.stardock.com/stardog/js/contest.ashx" type="text/javascript"></script>
+	<div style="margin: 10px auto 5px auto;">Copyright © 2009 Stardock Corporation. All rights reserved.</div>
+<!--<script src="http://www.stardock.com/stardog/js/contest.ashx" type="text/javascript"></script>-->
 <!-- FOOTER END -->
 
 
