--- a/s/su/sup/suprnova.com.html
+++ b/s/su/sup/suprnova.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the suprnova.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022136id_/http%3A//www.suprnova.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the suprnova.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609152720id_/http%3A//suprnova.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 
