shemaledvdclub.com (archived on 2009-06-09)
{
  "alexa_rank": 76625,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 2871,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.43,
  "homepage_snapshot_redirected_domain": "shemaledvdclub.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090328033725id_/http://shemaledvdclub.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090328033725id_/http%3A//shemaledvdclub.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "shemaledvdclub.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609155339id_/http%3A//shemaledvdclub.com/info/privacy",
  "policy_title": "Shemale DVD Club - Internet's biggest Shemale DVD site",
  "policy_url": "shemaledvdclub.com/info/privacy",
  "sha1": "7fb9e6923ba229ba5972982f276de1f63b821452",
  "simhash": 4291474335356072101,
  "simhash_updated": false,
  "site_hostname": "shemaledvdclub.com",
  "site_url": "http://shemaledvdclub.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090609155339",
  "word_count": 461,
  "year": 2009
}

--- a/s/sh/she/shemaledvdclub.com.html
+++ b/s/sh/she/shemaledvdclub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shemaledvdclub.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216163735id_/http%3A//shemaledvdclub.com/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shemaledvdclub.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609155339id_/http%3A//shemaledvdclub.com/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -31,10 +31,10 @@
  </div>
  
  <div class="infobox">
- <h2 class="one">2,097 <span>DVDs</span></h2>
- <h2 class="two">8701.09 <span>GB</span></h2>
- <script language="JavaScript" type="text/javascript">var secondsToUpdate = 44545; /var hideText = true;*/</script>
- <script language="JavaScript" type="text/javascript" src="/js/countdown.js"></script> <p>New DVD in <span class="countdown">12:22:23</span></p>
+ <h2 class="one">2,373 <span>DVDs</span></h2>
+ <h2 class="two">10068.03 <span>GB</span></h2>
+ <script language="JavaScript" type="text/javascript">var secondsToUpdate = 381; /var hideText = true;*/</script>
+ <script language="JavaScript" type="text/javascript" src="/js/countdown.js"></script> <p>New DVD in <span class="countdown">6:20</span></p>
  </div>
  
   
@@ -92,7 +92,7 @@
 					<p>To protect your privacy and security, we will also take reasonable steps to verify your identity before granting access or making corrections.</p>
 
 					<p><strong class="color">How To Contact Us: </strong><br>
-					Should you have other questions or concerns about these privacy policies, please call us at [+61 422132100] or send us an email at [<a href="mailto:support@hdmovieclub.com">support@hdmovieclub.com</a>].</p>
+					Should you have other questions or concerns about these privacy policies, please  send us an email at [<a href="mailto:support@hdmovieclub.com">support@hdmovieclub.com</a>].</p>
 
 				</div>
 
@@ -105,50 +105,50 @@
  <div class="netframe">
  <img src="http://i.hdmovieclub.com/images/shemaledvdclub.com/images/sidebox-bonus.jpg" alt="bonus" class="bonus"> <ul>
  <li>
- <a href="http://analmovieclub.com/dvds?nats=MTY3MjoyOjc"><img class="left" src="/images/sites/analmovieclub.jpg" alt="Anal Movie Club">Anal Movie Club</a>
+ <a href="http://analmovieclub.com/dvds"><img class="left" src="/images/sites/analmovieclub.jpg" alt="Anal Movie Club">Anal Movie Club</a>
  </li><li>
- <a href="http://asianmovievault.com/dvds?nats=MTY3MjoyOjg"><img class="left" src="/images/sites/asianmovievault.jpg" alt="Asian Movie Vault">Asian Movie Vault</a>
+ <a href="http://asianmovievault.com/dvds"><img class="left" src="/images/sites/asianmovievault.jpg" alt="Asian Movie Vault">Asian Movie Vault</a>
  </li><li>
- <a href="http://bigbuttmovieclub.com/dvds?nats=MTY3MjoyOjk"><img class="left" src="/images/sites/bigbuttmovieclub.jpg" alt="Big Butt Movie Club">Big Butt Movie Club</a>
+ <a href="http://bigbuttmovieclub.com/dvds"><img class="left" src="/images/sites/bigbuttmovieclub.jpg" alt="Big Butt Movie Club">Big Butt Movie Club</a>
  </li><li>
- <a href="http://bigtitmovieclub.com/dvds?nats=MTY3MjoyOjEw"><img class="left" src="/images/sites/bigtitmovieclub.jpg" alt="Big Tit Movie Club">Big Tit Movie Club</a>
+ <a href="http://bigtitmovieclub.com/dvds"><img class="left" src="/images/sites/bigtitmovieclub.jpg" alt="Big Tit Movie Club">Big Tit Movie Club</a>
  </li><li>
- <a href="http://cummovieclub.com/dvds?nats=MTY3MjoyOjEx"><img class="left" src="/images/sites/cummovieclub.jpg" alt="Cum Movie Club">Cum Movie Club</a>
+ <a href="http://cummovieclub.com/dvds"><img class="left" src="/images/sites/cummovieclub.jpg" alt="Cum Movie Club">Cum Movie Club</a>
  </li><li>
- <a href="http://dpmovieclub.com/dvds?nats=MTY3MjoyOjEz"><img class="left" src="/images/sites/dpmovieclub.jpg" alt="DP Movie Club">DP Movie Club</a>
+ <a href="http://dpmovieclub.com/dvds"><img class="left" src="/images/sites/dpmovieclub.jpg" alt="DP Movie Club">DP Movie Club</a>
  </li><li>
- <a href="http://deepthroatmovieclub.com/dvds?nats=MTY3MjoyOjEy"><img class="left" src="/images/sites/deepthroatmovieclub.jpg" alt="Deepthroat Movie Club">Deepthroat Movie Club</a>
+ <a href="http://deepthroatmovieclub.com/dvds"><img class="left" src="/images/sites/deepthroatmovieclub.jpg" alt="Deepthroat Movie Club">Deepthroat Movie Club</a>
  </li><li>
- <a href="http://ebonymovievault.com/dvds?nats=MTY3MjoyOjE0"><img class="left" src="/images/sites/ebonymovievault.jpg" alt="Ebony Movie Vault">Ebony Movie Vault</a>
+ <a href="http://ebonymovievault.com/dvds"><img class="left" src="/images/sites/ebonymovievault.jpg" alt="Ebony Movie Vault">Ebony Movie Vault</a>
  </li><li>
- <a href="http://fetishmovievault.com/dvds?nats=MTY3MjoyOjE1"><img class="left" src="/images/sites/fetishmovievault.jpg" alt="Fetish Movie Vault">Fetish Movie Vault</a>
+ <a href="http://fetishmovievault.com/dvds"><img class="left" src="/images/sites/fetishmovievault.jpg" alt="Fetish Movie Vault">Fetish Movie Vault</a>
  </li><li>
- <a href="http://gangbangmovieclub.com/dvds?nats=MTY3MjoyOjE2"><img class="left" src="/images/sites/gangbangmovieclub.jpg" alt="Gang Bang Movie Club">Gang Bang Movie Club</a>
+ <a href="http://gangbangmovieclub.com/dvds"><img class="left" src="/images/sites/gangbangmovieclub.jpg" alt="Gang Bang Movie Club">Gang Bang Movie Club</a>
  </li><li>
- <a href="http://gonzomovieclub.com/dvds?nats=MTY3MjoyOjE3"><img class="left" src="/images/sites/gonzomovieclub.jpg" alt="Gonzo Movie Club">Gonzo Movie Club</a>
+ <a href="http://gonzomovieclub.com/dvds"><img class="left" src="/images/sites/gonzomovieclub.jpg" alt="Gonzo Movie Club">Gonzo Movie Club</a>
  </li><li>
- <a href="http://internalmovieclub.com/dvds?nats=MTY3MjoyOjE4"><img class="left" src="/images/sites/internalmovieclub.jpg" alt="Internal Movie Club">Internal Movie Club</a>
+ <a href="http://internalmovieclub.com/dvds"><img class="left" src="/images/sites/internalmovieclub.jpg" alt="Internal Movie Club">Internal Movie Club</a>
  </li><li>
- <a href="http://interracialmovievault.com/dvds?nats=MTY3MjoyOjE5"><img class="left" src="/images/sites/interracialmovievault.jpg" alt="Interracial Movie Vault">Interracial Movie Vault</a>
+ <a href="http://interracialmovievault.com/dvds"><img class="left" src="/images/sites/interracialmovievault.jpg" alt="Interracial Movie Vault">Interracial Movie Vault</a>
  </li><li>
- <a href="http://latinamovieclub.com/dvds?nats=MTY3MjoyOjIw"><img class="left" src="/images/sites/latinamovieclub.jpg" alt="Latina Movie Club">Latina Movie Club</a>
+ <a href="http://latinamovieclub.com/dvds"><img class="left" src="/images/sites/latinamovieclub.jpg" alt="Latina Movie Club">Latina Movie Club</a>
  </li><li>
- <a href="http://lesbiandvdclub.com/dvds?nats=MTY3MjoyOjIx"><img class="left" src="/images/sites/lesbiandvdclub.jpg" alt="Lesbian DVD Club">Lesbian DVD Club</a>
+ <a href="http://lesbiandvdclub.com/dvds"><img class="left" src="/images/sites/lesbiandvdclub.jpg" alt="Lesbian DVD Club">Lesbian DVD Club</a>
  </li><li>
- <a href="http://milfmovieclub.com/dvds?nats=MTY3MjoyOjIy"><img class="left" src="/images/sites/milfmovieclub.jpg" alt="MILF Movie Club">MILF Movie Club</a>
+ <a href="http://milfmovieclub.com/dvds"><img class="left" src="/images/sites/milfmovieclub.jpg" alt="MILF Movie Club">MILF Movie Club</a>
  </li><li>
- <a href="http://povmovieclub.com/dvds?nats=MTY3MjoyOjIz"><img class="left" src="/images/sites/povmovieclub.jpg" alt="POV Movie Club">POV Movie Club</a>
+ <a href="http://povmovieclub.com/dvds"><img class="left" src="/images/sites/povmovieclub.jpg" alt="POV Movie Club">POV Movie Club</a>
  </li><li>
- <a href="http://squirtingmovieclub.com/dvds?nats=MTY3MjoyOjI1"><img class="left" src="/images/sites/squirtingmovieclub.jpg" alt="Squirting Movie Club">Squirting Movie Club</a>
+ <a href="http://squirtingmovieclub.com/dvds"><img class="left" src="/images/sites/squirtingmovieclub.jpg" alt="Squirting Movie Club">Squirting Movie Club</a>
  </li><li>
- <a href="http://teendvdclub.com/dvds?nats=MTY3MjoyOjI2"><img class="left" src="/images/sites/teendvdclub.jpg" alt="Teen DVD Club">Teen DVD Club</a>
+ <a href="http://teendvdclub.com/dvds"><img class="left" src="/images/sites/teendvdclub.jpg" alt="Teen DVD Club">Teen DVD Club</a>
  </li> </ul> </div>
  
   
  <img class="title" src="http://i.hdmovieclub.com/images/shemaledvdclub.com/images/sidebox-title02.gif" alt="Movie of the day">
  <div class="box movieday">
- <a href="/dvd/fuck-my-young-transexual-ass-2"><img src="http://i.hdmovieclub.com/movies/acidrain/fuckmyyoungtranssexualass2/fuckmyyoungtranssexualass2_front_m.jpg" alt="Fuck my Young Transexual Ass 2"></a>
- <h4><a href="/dvd/fuck-my-young-transexual-ass-2">Fuck my Young Transexual Ass 2</a></h4>
+ <a href="/dvd/hip-hop-heart-breakers"><img src="http://dl.hdmovieclub.com/u/movies/giadarling/hiphopheartbreakers/hiphopheartbreakers_front_m.jpg" alt="Hip Hop Heart Breakers"></a>
+ <h4><a href="/dvd/hip-hop-heart-breakers">Hip Hop Heart Breakers</a></h4>
  <div></div>
  <div>DVD Rating: unrated</div>
  <div>Downloads: </div>
@@ -196,6 +196,8 @@
  <a href="/info/privacy">Privacy Policy</a>
  <span> | </span>
  <a href="http://nats.movieprofits.com/track/NDIyOjk6Ng/">Webmasters</a>
+ <span> | </span>
+ <a href="http://www.reviewporn.com/straight/shemales/shemale-dvd-club" target="_blank">Shemale DVD Club Review</a>
  <span> | </span>
  <a href="http://www.billingsupport.com">Epoch/PaycomEU Support</a>
  <span> | </span>
