mitchell1.com (archived on 2009-06-09)
{
  "alexa_rank": 576377,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5781,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.26,
  "homepage_snapshot_redirected_domain": "mitchell1.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090407043914id_/http://www.mitchell1.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090407043914id_/http%3A//mitchell1.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mitchell1.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609172202id_/http%3A//www.mitchell1.com/privacy.asp",
  "policy_title": "Mitchell 1 - The First Choice of Automotive Professionals",
  "policy_url": "mitchell1.com/privacy.asp",
  "sha1": "717decdd384168654e7691e8fd9a93f7c065f686",
  "simhash": 8749027402812428005,
  "simhash_updated": false,
  "site_hostname": "mitchell1.com",
  "site_url": "http://mitchell1.com",
  "smog": 15.07,
  "strict_updated": false,
  "timestamp": "20090609172202",
  "word_count": 912,
  "year": 2009
}

--- a/m/mi/mit/mitchell1.com.html
+++ b/m/mi/mit/mitchell1.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mitchell1.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217050529id_/http%3A//www.mitchell1.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mitchell1.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609172202id_/http%3A//www.mitchell1.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- #BeginTemplate "/Templates/products.dwt" --><!-- DW6 --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -125,7 +125,9 @@ a:active {
           <span class="title"><a href="/BusinessPerformanceServices/home.asp">&nbsp;Business Performance Services</a></span>
           <div class="submenu"> <a href="/BusinessPerformanceServices/crm.asp">CRM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <a href="/BusinessPerformanceServices/eCRM.asp">eCRM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a><!--<a href="/BusinessPerformanceServices/dp.asp">DataProtection&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <a href="/BusinessPerformanceServices/web.asp"> WebServices &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>--> 
 		   <a href="/BusinessPerformanceServices/performancecenter.asp">PerformanceCenter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-		  <a href="/BusinessPerformanceServices/ServiceIntelligence.asp">ServiceIntelligence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div>
+		  <a href="/BusinessPerformanceServices/ServiceIntelligence.asp">ServiceIntelligence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		   <a href="/BusinessPerformanceServices/OwnerAutoSite.asp">OwnerAutoSite&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+		    <a href="/BusinessPerformanceServices/ShopMeter.asp">ShopMeter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div>
           <span class="title"><a href="/CommercialVehicleGroup/home.asp">&nbsp;Commercial Vehicle Group </a></span>
           <div class="submenu"> <a href="/CommercialVehicleGroup/truck.asp">Medium Truck&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <a href="/CommercialVehicleGroup/ttnet.asp">Tractor-Trailer.net &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </div>
       <span class="title"><a href="/CustomerService">&nbsp;Customer Service</a> </span>
@@ -358,7 +360,7 @@ function OneStat_Pageview()
 
 OneStat_Pageview();
 //-->
-          </script><a href="http://www.onestat.com/aspx/login.aspx?sid=183167" target="_blank"><img id="ONESTAT_TAG" border="0" width="1" height="1" src="https://stat.onestat.com/stat.aspx?tagver=2&amp;sid=183167&amp;url=https%3A//web.archive.org/web/20081217050529id_/http%253A//www.mitchell1.com/privacy.asp&amp;ti=Mitchell%201%20-%20The%20First%20Choice%20of%20Automotive%20Professionals&amp;section=&amp;custom=&amp;rf=&amp;tz=0&amp;ch=5&amp;js=1&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No"></a>
+          </script><a href="http://www.onestat.com/aspx/login.aspx?sid=183167" target="_blank"><img id="ONESTAT_TAG" border="0" width="1" height="1" src="https://stat.onestat.com/stat.aspx?tagver=2&amp;sid=183167&amp;url=https%3A//web.archive.org/web/20090609172202id_/http%253A//www.mitchell1.com/privacy.asp&amp;ti=Mitchell%201%20-%20The%20First%20Choice%20of%20Automotive%20Professionals&amp;section=&amp;custom=&amp;rf=&amp;tz=0&amp;ch=5&amp;js=1&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No"></a>
                       <noscript>
                       <a href="http://www.onestat.com/aspx/login.aspx?sid=183167" target="_blank"><img border="0" width="1" height="1" src="http://stat.onestat.com/stat.aspx?tagver=2&amp;sid=183167&amp;js=No&amp;" /></a>
                       </noscript>
