--- a/m/mi/mir/mirc.com.html
+++ b/m/mi/mir/mirc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mirc.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217035838id_/http%3A//www.mirc.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mirc.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609173401id_/http%3A//www.mirc.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>mIRC: Privacy Policy</title>
@@ -11,77 +11,55 @@
 </head>
 <body>
 
-<table width="100%" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top">
-      <!-- Advert Google -->
-      <script type="text/javascript">
-      <!--
-      var ad = new Array();
-      ad[0] = '<sc' + 'ript type="text/javascript"> google_ad_client = "pub-6250690665284835"; google_ad_slot = "8557473169"; google_ad_width = 160; google_ad_height = 600; <\/sc' + 'ript><sc' + 'ript type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"><\/sc' + 'ript>';
-      ad[1] = '<sc' + 'ript type="text/javascript"> google_ad_client = "pub-6250690665284835"; google_ad_slot = "7106779464"; google_ad_width = 160; google_ad_height = 600; <\/sc' + 'ript><sc' + 'ript type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"><\/sc' + 'ript>';
-      var n = Math.floor(Math.random() * ad.length);
-      //document.write(ad[n]);
-      //-->
-      </script>
-      <br class="space">
-      <br>
-      <script type="text/javascript">
-      <!--
-      google_ad_client = "pub-6250690665284835";
-      google_ad_slot = "0311619167";
-      google_ad_width = 120;
-      google_ad_height = 240;
-      //-->
-      </script>
-      <!-- <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script> -->
-      <!-- Advert Google -->
-    </td>
-    <td width="10"></td>
-    <td valign="top">
+<!-- Header Start -->
+<table width="100%" cellpadding="0" cellspacing="0" class="text">
+<tbody>
+  <tr>
+    <td class="left"></td>
+    <td class="middle">
       <div class="hxsnazzy">
       <div class="hxboxcontent">
-        <table width="100%" cellpadding="0" cellspacing="0">
-          <tbody><tr valign="middle">
-            <td width="6%"></td>
-						<td><h1 class="logo"><a href="/index.html"><img src="http://mirc.cachefly.net/images/barlogo.gif" alt="mIRC" width="16" height="16"></a></h1></td>
-						<td width="5%"></td>
-						<td width="10%"><a href="/index.html">Home</a></td>
-						<td width="5%"><table cellpadding="0" cellspacing="0" align="center"><tbody><tr><td class="sepright">&nbsp;</td><td class="sepleft">&nbsp;</td></tr></tbody></table></td>
-						<td width="10%"><a href="/mirc.html">About</a></td>
-						<td width="5%"><table cellpadding="0" cellspacing="0" align="center"><tbody><tr><td class="sepright">&nbsp;</td><td class="sepleft">&nbsp;</td></tr></tbody></table></td>
-						<td width="10%"><a href="/get.html">Download</a></td>
-						<td width="5%"><table cellpadding="0" cellspacing="0" align="center"><tbody><tr><td class="sepright">&nbsp;</td><td class="sepleft">&nbsp;</td></tr></tbody></table></td>
-						<td width="10%"><a href="/register.html">Register</a></td>
-						<td width="5%"><table cellpadding="0" cellspacing="0" align="center"><tbody><tr><td class="sepright">&nbsp;</td><td class="sepleft">&nbsp;</td></tr></tbody></table></td>
-						<td width="10%"><a href="/links.html">Community</a></td>
-						<td width="5%"><table cellpadding="0" cellspacing="0" align="center"><tbody><tr><td class="sepright">&nbsp;</td><td class="sepleft">&nbsp;</td></tr></tbody></table></td>
-						<td width="10%"><a href="/help.html">Help</a></td>
-						<td width="4%"></td>
+        <table width="100%" cellpadding="0" cellspacing="0" class="text">
+        <tbody>
+          <tr valign="middle">
+            <td class="w5p"></td>
+            <td><h1 class="logo"><a href="/index.html"><img src="http://cdn.mirc.com/images/barlogo.gif" alt="mIRC" width="16" height="16"></a></h1></td>
+            <td class="w5p"></td>
+            <td class="w10p"><a href="/index.html">Home</a></td>
+            <td class="w5p"><span class="sepright">&nbsp;</span><span class="sepleft">&nbsp;</span></td>
+            <td class="w10p"><a href="/mirc.html">About</a></td>
+            <td class="w5p"><span class="sepright">&nbsp;</span><span class="sepleft">&nbsp;</span></td>
+            <td class="w10p"><a href="/get.html">Download</a></td>
+            <td class="w5p"><span class="sepright">&nbsp;</span><span class="sepleft">&nbsp;</span></td>
+            <td class="w10p"><a href="/register.html">Register</a></td>
+            <td class="w5p"><span class="sepright">&nbsp;</span><span class="sepleft">&nbsp;</span></td>
+            <td class="w10p"><a href="/links.html">Community</a></td>
+            <td class="w5p"><span class="sepright">&nbsp;</span><span class="sepleft">&nbsp;</span></td>
+            <td class="w10p"><a href="/help.html">Help</a></td>
+            <td class="w5p"></td>
           </tr>
-        </tbody></table>
+        </tbody>
+        </table>
       </div>
       <em class="hxbottom"><em class="hxb4"></em><em class="hxb3"></em><em class="hxb2"></em><em class="hxb1"></em></em>
       </div>
       <br>
-<!--
     </td>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top"></td>
-    <td width="10"></td>
+    <td class="right"></td>
   </tr>
+</tbody>
 </table>
-<table width="100%" cellpadding="0" cellspacing="0">
+<table width="100%" cellpadding="0" cellspacing="0" class="text">
+<tbody>
   <tr>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top"></td>
-    <td width="10"></td>
-    <td valign="top">
--->
+    <td class="left"></td>
+    <td class="middle">
+<!-- Header End -->
 
-<table class="text">
-  <tbody><tr>
+<!-- Content Start -->
+<table width="100%" cellpadding="0" cellspacing="0" class="text">
+<tbody>
+  <tr>
     <td>
       <h1 class="title">Privacy Policy</h1>
       <p>
@@ -95,12 +73,15 @@
       <p>
       </p><h2 class="topic">Use of cookies</h2>
       <br>
-      Cookies are pieces of information that your browser stores on your
+      A cookie is a small amount of data that your browser stores on your
       computer on behalf of the website that you are visiting. This allows
-      a website to provide you with useful features that otherwise would
-      not be possible. The mIRC website does not currently use cookies but
-      may do so in future if we decide to add features that enhance the
-      website.
+      a website to remember details about your visit, such as your preferences
+      or the pages you have visited, and to provide useful features based on
+      those details. The mIRC website uses cookies in a number of places, such
+      as on the Registration page while processing your order or in the
+      Discussion Forums while you are browsing or creating posts. If adverts
+      are being displayed on the website, they may also use cookies for similar
+      reasons.
       <p>
       </p><h2 class="topic">Log Files and IP Addresses</h2>
       <br>
@@ -113,7 +94,6 @@
       information although visitors should be aware that both static and
       dynamic IP addresses can be mapped back to most ISPs.
       <p>
-
       </p><h2 class="topic">Names and Email addresses</h2>
       <br>
       We collect your email address when you subscribe to the mIRC mailing
@@ -166,57 +146,42 @@
       please contact us.
     </td>
   </tr>
-</tbody></table>
-
-<!--
-    </td>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top"></td>
-    <td width="10"></td>
-  </tr>
+</tbody>
 </table>
-<table width="100%" cellpadding="0" cellspacing="0">
+<!-- Content End -->
+
+<!-- Footer Start -->
+    </td>
+    <td class="right"></td>
+  </tr>
+</tbody>
+</table>
+<table width="100%" cellpadding="0" cellspacing="0" class="text">
+<tbody>
   <tr>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top"></td>
-    <td width="10"></td>
-    <td valign="top">
--->
+    <td class="left"></td>
+    <td class="middle">
       <br>
       <table width="100%" cellpadding="0" cellspacing="0" class="text">
-			  <tbody><tr>
-				  <td align="right" nowrap="nowrap">
-					  <a href="/privacy.html">Privacy</a>
-						&nbsp;
-					  <a href="/contact.html">Contact Us</a>
-						<br>
-						Copyright © mIRC Co. Ltd. 1995-2008. All Rights Reserved.
-					</td>
+      <tbody>
+        <tr>
+          <td class="footer">
+            <a href="/privacy.html">Privacy</a>
+            &nbsp;
+            <a href="/contact.html">Contact Us</a>
+            <br>
+            Copyright © mIRC Co. Ltd. 1995-2009. All Rights Reserved.
+          </td>
         </tr>
-			</tbody></table>
+      </tbody>
+      </table>
       <br>
     </td>
-    <td width="10"></td>
-    <td width="15%" align="center" valign="top">
-      <!-- SiteSearch Google -->
-      <!-- SiteSearch Google -->
-      <!-- Advert Google -->
-      <br class="space">
-      <br>
-      <script type="text/javascript">
-      <!--
-      google_ad_client = "pub-6250690665284835";
-      google_ad_slot = "6389682732";
-      google_ad_width = 120;
-      google_ad_height = 240;
-      //-->
-      </script>
-      <!-- <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script> -->
-      <!-- Advert Google -->
-    </td>
-    <td width="10"></td>
+    <td class="right"></td>
   </tr>
-</tbody></table>
+</tbody>
+</table>
+<!-- Footer End -->
 
 
 
