--- a/w/wo/wor/worldtvpc.com.html
+++ b/w/wo/wor/worldtvpc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldtvpc.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217034703id_/http%3A//www.worldtvpc.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldtvpc.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609213717id_/http%3A//www.worldtvpc.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta name="verify-v1" content="yiiQvTtIjaw8xn41bCdYvik1OvJBmr8UH1HVHnMrNak=">
@@ -127,15 +127,18 @@ function P7_TMall(a){ //v2.5 by Project Seven Development(PVII)
 <body onload="P7_TMopen(); P7_TMall(0);" ondragstart="return false" onselectstart="return false">
 <style type="text/css">
 <!--
-.Top02 {color: #CC0000}
-.style8 {font-size: 10px}
+.style13 {font-size: 12px}
+.style15 {
+	color: #990000;
+	font-weight: bold;
+}
 -->
 </style>
 <table width="970" border="0" align="center" cellpadding="0" cellspacing="0">
 	<tbody><tr bgcolor="#DFE0FF">
 		<td align="center" valign="bottom"><table width="100%" border="0" cellpadding="1" cellspacing="0">
 			<tbody><tr align="center" valign="middle">
-				<td width="238" bgcolor="#DFE0FF"><a href="http://www.worldtvpc.com"><img src="http://www.worldtvpc.com/images/worldtvlogo.png" alt="worldtvpc.com" width="237" height="87" border="0"></a></td>
+				<td width="238" bgcolor="#DFE0FF"><a href="http://www.worldtvpc.com"><img src="http://www.worldtvpc.com/images/worldtvlogo.png" alt="internet tv" width="237" height="87" border="0"></a></td>
 				<td width="728" bgcolor="#DFE0FF"><table width="100%" border="0" align="center" cellpadding="2" cellspacing="0">
 					<tbody><tr>
 						<td height="24" align="center" valign="top"><strong>Top Movies Searched</strong></td>
@@ -143,15 +146,28 @@ function P7_TMall(a){ //v2.5 by Project Seven Development(PVII)
 					<tr>
 						<td align="center" valign="top"><style type="text/css">
 <!--
-.style3 {font-family: Tahoma}
+.style3 {
+	font-family: Tahoma;
+	font-size: 10px;
+}
+.style5 {font-size: 12}
 -->
 </style>
-<p><span class="style3" style="font-size:10px"><a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Four+Christmases&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1136">Four Christmases</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Twilight&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1091">Twilight</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Transporter+3&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1378">Transporter 3</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Punisher%3A+War+Zone&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1439">Punisher: War Zone</a> - <span class="style3" style="font-size:10px"><a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=The+day+the+earth+stood+still+2008&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1370">The day the earth stood still</a> -</span> <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Saw+V&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1085">Saw V</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=High+School+Musical+3&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1393">High School Musical 3</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Max+Payne&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1123">Max Payne</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Changeling&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1030">Changeling</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Zack+and+Miri+Make+a+Porno&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1252">Zack and Miri Make a Porno</a>&nbsp; - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Quantum+of+Solace&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1059">Quantum of Solace</a> -&nbsp;<a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Beverly+Hills+Chihuahua&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1013">Beverly Hills Chihuahua</a> - &nbsp;<a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Sex+Drive&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1340">Sex Drive</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Body+of+Lies&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1123">Body of Lies</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Lakeview+Terrace&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1091">Lakeview Terrace</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Burn+After+Reading&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1059">Burn After Reading</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Righteous+Kill&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1043">Righteous Kill</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Mirrors&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1378">Mirrors </a>- <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Madagascar+Escape+2+Africa&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1222">Madagascar Escape 2 Africa</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Role+Models&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1288">Role Models</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=The+Haunting+of+Molly+Hartley&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#998">The Haunting of Molly Hartley</a></span></p>
+<p class="style5"><a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=x-men+origins&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1368">X-men Wolverine</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=obsessed&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#929">Obsessed</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=next+day+air&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1403">Next day air</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Ghosts+of+Girlfriends+Past&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1319">Ghosts of Girlfriends Past</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=duplicity&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#993">Duplicity</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Confessions+of+a+Shopaholic+&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1352">Confessions of a Shopaholic</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Gran+Torino&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1284">Gran Torino</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Bride+Wars&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1373">Bride Wars</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=The+Unborn&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1287">The Unborn</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Slumdog+Millionaire&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1107">Slumdog Millionaire</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Valkyrie&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1122">Valkyrie</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Not+Easily+Broken&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1171">Not Easily Broken</a> - <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Push&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#947">Push</a><a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Changeling&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1030"></a> -&nbsp;<a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Beverly+Hills+Chihuahua&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1013">Beverly Hills Chihuahua</a> -  <a href="http://www.worldtvpc.com/moviesdb/searchres.php?cx=partner-pub-6343483029956111%3Akca90n-ml8a&amp;cof=FORID%3A11&amp;ie=ISO-8859-1&amp;q=Burn+After+Reading&amp;cat=Movies+%26+TV+Shows&amp;sa=Search#1059">Burn After Reading</a></p>
 </td>
 					</tr>
 				</tbody></table></td>
-<td width="100" height="90" bgcolor="#FFFFFF"><a href="http://www.worldtvpc.com/blog/the-definitive-guide-to-watching-internet-tv-on-pc/"><img src="http://www.worldtvpc.com/imgs/onlinetvguide.jpg" alt="internet tv guide" width="71" height="53" border="0"></a><br>
-							<span class="style8">The Definitive Guide to Watching <a href="http://www.worldtvpc.com/blog/the-definitive-guide-to-watching-internet-tv-on-pc/">TV on your PC</a></span></td>
+<td width="100" height="90" bgcolor="#DFE0FF">
+
+
+
+
+	<p><span class="style13"><span class="style15">Make Money<br> 
+				with<br>
+				Your own</span><a href="http://www.nettvpc.com"><br>
+				Internet TV business<br>
+				</a></span></p>
+	</td>
 			</tr>
 		</tbody></table></td>
 	</tr>
@@ -180,16 +196,16 @@ google_ad_height = 15;
 						<div id="p7TBMrootbox">
 							<ul class="p7TBMtext">
 								<li><a href="http://www.worldtvpc.com" id="p7TBMt01">Home</a></li>
-								<li><a href="http://www.worldtvpc.com/live/" id="p7TBMt02">live Sports</a></li>
+								<li><a href="http://www.worldtvpc.com/live" id="p7TBMt02">live Sports</a></li>
 								<li><a href="http://www.worldtvpc.com/videos.php" id="p7TBMt03">Videos</a></li>
 								<li><a href="http://www.worldtvpc.com/fullepisodes.php" id="p7TBMt04">Full Episodes</a></li>
 								<li><a href="http://www.worldtvpc.com/blog/" id="p7TBMt05">TV Blog</a></li>
 								<li><a href="http://www.worldtvpc.com/forum/" id="p7TBMt06">TV Forum</a></li>
-								<li><a href="http://www.worldtvpc.com/mediaplayers.htm" id="p7TBMt07">Media Players</a></li>
+								<li><a href="http://www.worldtvpc.com/TVguides/" id="p7TBMt07">TV Guides</a></li>
 								<li><a href="http://www.tvpc-elite.com" id="p7TBMt08">TV Software</a></li>
 								<li><a href="worldtvpc_toolbar/" id="p7TBMt09">TV Toolbar</a></li>
-								<li><a href="http://www.worldtvpc.com/vids/" id="p7TBMt10">Video Widget</a></li>
-								<li><a href="http://www.worldtvpc.com/onlinevideosites/" id="p7TBMt11">Free TV database</a><br>
+								<li><a href="http://www.worldtvpc.com/widget" id="p7TBMt10">Internet TV Widget</a></li>
+								<li><a href="http://www.worldtvpc.com/onlinevideosites/" id="p7TBMt11">Free TV websites</a><br>
 								</li>
 							</ul>
 						</div>
@@ -253,6 +269,14 @@ You may not sell or resell any part of   this Website or access to this Website.
                   			<br>
                   			<p>A cookie is a piece of data stored on the user's hard drive tied  to aggregate information about the user. Once the user closes their  browser, the cookie simply terminates. For instance, by setting a  cookie on our site, the user would not have to log in a password more  than once, thereby saving time while on our site. If a user rejects the  cookie, they may still use our site. The only drawback to this is that  the user will be limited in some areas of our site. Cookies can also  enable us to track and target the interests of our users to enhance the  experience on our site.</p>
                   			<p>Some of our business partners use cookies on our site (for example,  advertisers). However, we have no access to or control over these  cookies.</p>
+                  			<ul>
+								<li>Google, as a third-party vendor, uses cookies to serve ads on your site. </li>
+                  				<li>Google's use of the DART cookie enables it to serve ads to  your users based on their visit to your sites and other sites on the  Internet. </li>
+                  				<li>Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.co.uk/privacy_ads.html">Google ad and content network privacy policy</a>. </li>
+                  				</ul>
+                  			<p>Because publisher sites and laws across countries vary, we're unable  to suggest specific privacy policy language. However, you may wish to  review resources such as the <a href="http://www.networkadvertising.org/">Network Advertising Initiative</a>, or NAI, which suggests the following language for data collection of non-personally identifying information:</p>
+                  			<blockquote>We use third-party advertising companies to serve ads when  you visit our website. These companies may use information (not  including your name, address, email address or telephone number) about  your visits to this and other websites in order to provide  advertisements about goods and services of interest to you. If you  would like more information about this practice and would like to know  your options in relation to·not having this information used by these  companies, click here.</blockquote>
+                  			<p>You can find additional information in Appendix A of the <a href="http://www.networkadvertising.org/pdfs/NAI_principles.pdf">NAI Self-Regulatory principles for publishers</a> (PDF). Please note that the NAI may change this sample language at any time.</p>
                   			<h3>Advertising</h3>
                   			<br>
                   			<p>We use third-party advertising companies to serve ads when you  visit our Web site. These companies may use session data (not including  your name, address, email address or telephone number) about your  visits to this and other Web sites in order to provide advertisements  on this site and other sites about goods and services that may be of  interest to you. </p>
@@ -345,30 +369,15 @@ google_ad_height = 15;
     <td height="14" align="center" valign="top" bgcolor="#CDCCFF"><img src="http://www.worldtvpc.com/imgs/abot.png" height="10"></td>
   </tr>
 </tbody></table>
-<!-- Start Quantcast tag -->
+
+<!-- Kontera ContentLink(TM);-->
 <script type="text/javascript">
-_qoptions={
-qacct:"p-23DyIXmMP7V_w"
-};
+var dc_AdLinkColor = 'blue' ;
+var dc_PublisherID = 17534 ;
 </script>
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
-<noscript>
-<a href="http://www.quantcast.com/p-23DyIXmMP7V_w" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-23DyIXmMP7V_w.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
-</noscript>
-<!-- End Quantcast tag -->
-
-<!-- Kontera ContentLink -->
-<script type="text/javascript">
-var dc_UnitID = 14;
-var dc_PublisherID = 17534;
-var dc_AdLinkColor = 'blue';
-var dc_isBoldActive= 'no';
-var dc_adprod='ADL';
+<script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js">
 </script>
-<script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js"></script>
-<!-- Kontera ContentLink -->
-
-
+<!-- Kontera ContentLink(TM) -->
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
