--- a/s/sp/spo/sponsoredreviews.com.html
+++ b/s/sp/spo/sponsoredreviews.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sponsoredreviews.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218113139id_/http%3A//www.sponsoredreviews.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sponsoredreviews.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609223114id_/http%3A//www.sponsoredreviews.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -97,14 +97,38 @@ this privacy statement.</p>
 
     </div>
         <div id="footer">
-	  © 2007 SponsoredReviews.com - <a href="/privacy.asp">Privacy Policy</a> - <a href="/terms.asp">Terms &amp; Conditions </a>&nbsp; <a href="http://www.sponsoredreviews.com/page/make-money-blogging.html"> Earn Money Blogging</a>&nbsp;<a href="http://www.sponsoredreviews.com/page/get-paid-to-blog.html">get paid to blog</a>
+	  © 2007 SponsoredReviews.com - <a href="/privacy.asp">Privacy Policy</a> - <a href="/terms.asp">Terms &amp; Conditions </a>&nbsp;<a href="http://sponsoredreviews.com/page/affiliateprogram.html">Affiliate Program</a> <br><a href="http://www.sponsoredreviews.com/page/make-money-blogging.html">Bloggers - Earn Money Blogging</a>&nbsp;<a href="http://www.sponsoredreviews.com/page/get-paid-to-blog.html">Bloggers - Get Paid to blog</a>
+
+<a href="http://sponsoredreviews.com/sitemap/">Blog Directory</a>
+
+ <table border="0">
+
+
+
+<tbody><tr>
+<td>
+<!-- START SCANALERT CODE -->
+<a target="_blank" href="https://www.mcafeesecure.com/RatingVerify?ref=www.sponsoredreviews.com"><img width="94" height="54" border="0" src="//images.scanalert.com/meter/www.sponsoredreviews.com/13.gif" alt="McAfee Secure sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams" oncontextmenu="alert('Copying Prohibited by Law - McAfee Secure is a Trademark of McAfee, Inc.'); return false;"></a>
+<!-- END SCANALERT CODE --> 
+</td>
+
+<td> <div class="AuthorizeNetSeal"> <script type="text/javascript" language="javascript">var ANS_customer_id="a1de89cc-8fcf-40c9-a4b0-697364bec862";</script> <script type="text/javascript" language="javascript" src="//verify.authorize.net/anetseal/seal.js"></script> <a href="http://www.authorize.net/" id="AuthorizeNetText" target="_blank" rel="no_follow">Click to Verify</a> </div> 
+
+</td>
+<td>
+<!-- GeoTrust QuickSSL [tm] Smart Icon tag. Do not edit. -->
+		<script language="JavaScript" type="text/javascript" src="//smarticon.geotrust.com/si.js"></script>
+		<!-- end GeoTrust Smart Icon tag -->
+</td>
+</tr>
+</tbody></table>
 	</div>
 	
 	<br><br>
 	<div align="center">
- 	<!-- START SEOENG SEARCH FORM -->
-	<form name="SEOENGForm" method="post" action="http://search.seoeng.com/" enctype="application/x-www-form-urlencoded"> <input type="hidden" name="externalSearchForm" value=""> <table> <tbody><tr> <td colspan="3" align="center"> <input type="text" style="visibility:hidden;display:none;width:99%;text-align:center;" name="do-not-remove" value="Do NOT remove this -- allows users to hit 'enter' on IE -- this box will not be shown!!"> </td> </tr> <tr> <td> <a href="http://www.seoeng.com" rel="nofollow"><img border="0" alt="Online Marketing Guide" src="https://www.sponsoredreviews.com/images/SEOENGLogo.jpg"></a> </td> <td> <input id="website" type="text" name="website" value="http://" style="width: 250px;border-width: 1px;border-color: #666600;border-style: solid;"> </td> <td> <input onclick="javascript:searchSEOENG();" id="searchButton" type="submit" name="searchButton" value="SEOENG Search"> </td> </tr> <tr> <td colspan="3" align="center"> <font style="font-size:12px" color="#666600" face="Arial">SEOENG (<b>see</b>-ohnj) v. to affect a website so as to make it highly visible to the world. </font> </td> </tr> <tr> <td colspan="3" align="center"> <font style="font-size:.8em" color="#666600" face="Arial"><a style="color: #666600; text-decoration:underline;" href="http://www.seoeng.com/seoeng-form.htm" rel="nofollow">Add the SEOENG™ Search Bar to your Website!</a></font> </td> </tr> </tbody></table> </form>
-	<!-- END SEOENG SEARCH FORM -->
+ 	<!-- START SEOENG SEARCH FORM
+	<form name="SEOENGForm" method="post" action="http://search.seoeng.com/" enctype="application/x-www-form-urlencoded"> <input type="hidden" name="externalSearchForm" value="" /> <table> <tr> <td colspan="3" align="center"> <input type="text" style="visibility:hidden;display:none;width:99%;text-align:center;" name="do-not-remove" value="Do NOT remove this -- allows users to hit 'enter' on IE -- this box will not be shown!!"/> </td> </tr> <tr> <td> <a href="http://www.seoeng.com" rel="nofollow"><img border="0" alt="Online Marketing Guide" src="https://www.sponsoredreviews.com/images/SEOENGLogo.jpg"></a> </td> <td> <input id="website" type="text" name="website" value="http://" style="width: 250px;border-width: 1px;border-color: #666600;border-style: solid;" /> </td> <td> <input onclick="javascript:searchSEOENG();" id="searchButton" type="submit" name="searchButton" value="SEOENG Search" /> </td> </tr> <tr> <td colspan="3" align="center"> <font style="font-size:12px" color="#666600" face="Arial">SEOENG (<b>see</b>-ohnj) v. to affect a website so as to make it highly visible to the world. </font> </td> </tr> <tr> <td colspan="3" align="center"> <font style="font-size:.8em" color="#666600" face="Arial"><a style="color: #666600; text-decoration:underline;" href="http://www.seoeng.com/seoeng-form.htm" rel="nofollow">Add the SEOENG™ Search Bar to your Website!</a></font> </td> </tr> </table> </form>
+	 END SEOENG SEARCH FORM -->
  	
 	</div>
   </div>
